--- a/emp_app/templates/index.html
+++ b/emp_app/templates/index.html
@@ -8,16 +8,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Office Employee Management System!</title>
+    <title>Team Member Management System!</title>
   </head>
   <body>
 <div class="container">
-    <h1>Office Employee Management System!</h1>
+    <h1>Team Member Management System!</h1>
 <hr>
-    <a class="btn btn-info" href="/all_emp" role="button">View All Employees</a>
-    <a class="btn btn-info" href="/add_emp" role="button">Add An Employee</a>
-    <a class="btn btn-info" href="/remove_emp" role="button">Remove All Employee</a>
-    <a class="btn btn-info" href="/filter_emp" role="button">Filter Employee Details</a>
+    <a class="btn btn-info" href="/all_emp" role="button">View All Members</a>
+    <a class="btn btn-info" href="/add_emp" role="button">Add a Member</a>
+    <a class="btn btn-info" href="/remove_emp" role="button">Remove All Member</a>
+    <a class="btn btn-info" href="/filter_emp" role="button">Filter Member Details</a>
 </hr>
 </div>
 
