--- a/emp_app/templates/add_emp.html
+++ b/emp_app/templates/add_emp.html
@@ -1,47 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+<head>
+    <meta charset="UTF-8">
     <title>Add Employee</title>
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
   <body>
-<div class="container">
-    <h1>Add An Employee!</h1>
-<hr>
+  <div class="container">
+          <h1>Add An Employee!</h1>
+      <hr>
+
 <form action="/add_emp" method="post">
     {% csrf_token %}
-    
-      <label for="first_name">First Name</label><br>
-      <input type="text"  id="first_name" name="first_name" value="{{ first_name }}"><br>
-      <label for="last_name">Last Name</label><br>
-      <input type="text"  id="last_name" name="last_name" value="{{ last_name }}"><br>
-      <label for="salary">Salary</label><br>
-      <input type="number"  id="salary" name="salary" value="{{ salary }}"><br>
-      <label for="phone">Phone Number</label><br>
-      <input type="number"  id="phone" name="phone" value="{{ phone }}"><br>
-      <label for="dept">Department</label><br>
-      <input type="number"  id="dept" name="dept" value="{{ dept }}"><br>
-      <label for="role">Role</label><br>
-      <input type="number"  id="role" name="role" value="{{ role }}"><br>
-      <label for="bonus">Bonus</label><br>
-      <input type="number"  id="bonus" name="bonus" value="{{ bonus }}"><br>
-        <hr>
+    <label for="first_name">First Name</label><br>
+    <input type="text" id="first_name" name="first_name" value="{{ first_name }}"><br>
+    <label for="last_name">Last Name</label><br>
+    <input type="text" id="last_name" name = "last_name" value="{{ last_name }}"><br>
+    <label for="salary">Salary</label><br>
+    <input type="number" id="salary" name="salary" value="{{ salary }}"><br>
+    <label for="dept">Department</label><br>
+    <input type="number" id="dept" name="dept" value="{{ dept }}"><br>
+    <label for="role">Role</label><br>
+    <input type="number" id="role" name="role" value="{{ role }}"><br>
+    <label for="bonus">Bonus</label><br>
+    <input type="number" id="bonus" name="bonus" value="{{ bonus }}"><br>
+    <label for="phone">Phone Number</label><br>
+    <input type="number" id="phone" name="phone" value="{{ phone }}"><br>
+    <hr>
     <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+</form>
 
-    
-</div>
+  </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
   </body>
 </html>
